--- a/03 - CSS Variables/index.html
+++ b/03 - CSS Variables/index.html
@@ -3,11 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Scoped CSS Variables and JS</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
 
   <div class="controls">
+    <label for="background">Background Color:</label>
+    <input id="background" type="color" name="background" value="#491937">
+
+    <label for="text">Text Color:</label>
+    <input id="text" type="color" name="text" value="#ffffff">
+
     <label for="spacing">Spacing:</label>
     <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
 
@@ -18,34 +25,9 @@
     <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="stan-b-F7m0W7QLP1s-unsplash.jpg">
 
-  <style>
-
-    /*
-      misc styles, nothing to do with CSS variables
-    */
-
-    body {
-      text-align: center;
-      background: #193549;
-      color: white;
-      font-family: 'helvetica neue', sans-serif;
-      font-weight: 100;
-      font-size: 50px;
-    }
-
-    .controls {
-      margin-bottom: 50px;
-    }
-
-    input {
-      width: 100px;
-    }
-  </style>
-
-  <script>
-  </script>
+  <script src="script.js"></script>
 
 </body>
 </html>
